oktana-slack-integration/force-app/main/default/objects/SlackWorkspace__c/SlackWorkspace__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SlackWorkspace</label>
</CustomObject>