oktana-slack-integration/force-app/main/default/objects/SlackWorkspace__c/fields/channelGeneralId__c.field-meta.xml
<CustomField>
    <fullName>channelGeneralId__c</fullName>
    <description>General channel Id, required in order to use the slack bot.</description>
    <label>channelGeneralId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>