oktana-slack-integration/force-app/main/default/objects/SlackWorkspace__c/fields/SlackWorkspaceId__c.field-meta.xml
<CustomField>
    <fullName>SlackWorkspaceId__c</fullName>
    <label>SlackWorkspaceId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>