oktana-slack-integration/force-app/main/default/objects/SlackWorkspace__c/fields/SlackWorkspaceLabel__c.field-meta.xml
<CustomField>
    <fullName>SlackWorkspaceLabel__c</fullName>
    <label>SlackWorkspaceLabel</label>
    <length>200</length>
    <type>Text</type>
</CustomField>